buy now form name gaps fix
Прокрутку модалки чтобы она вся помещалась сделать не удалось, к сожалению. Был вариант из домашки, но как оказалось он тоже был завязан на js (а скрипт у нас теперь совсем другой).

--- a/src/css/overlay_Sihida.css
+++ b/src/css/overlay_Sihida.css
@@ -1,23 +1,24 @@
 .overlay {
-    /* Скрываем подложку  */
-    opacity: 0;
-    visibility: hidden;
-  
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 20;
-    transition: 0.3s all;
-  }
-  
- 
-  /* Стили для активных классов подложки и окна */
-  
-  .modal.active,
-  .overlay.active {
-    opacity: 1;
-    visibility: visible;
-  }
+  /* Скрываем подложку  */
+  opacity: 0;
+  visibility: hidden;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+  overflow-y: auto;
+}
+
+/* Стили для активных классов подложки и окна */
+
+.modal.active,
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
+  overflow-y: auto;
+}
